--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "bootstrap": "^5.3.6",
     "date-fns": "^4.1.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
